# Learning-Data-Structures-DSA

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  input.txt  main.c  thinking.txt
LinkedList/: Implementation.c
Stack/: ImplementationUsingDynamicArrays.c  ImplementationUsingStaticArray.c
Stack/Application/: BalancedParenthesis.c  ExpressionChanger.c  ExpressionEvaluator.c
data_structures/: CMakeLists.txt
data_structures/dynamic_array/: CMakeLists.txt  array.c  array.h
data_structures/dynamic_array/implementations/: CMakeLists.txt
data_structures/dynamic_array/implementations/char/: CMakeLists.txt  dynamic_array_c.c  dynamic_array_c.h
data_structures/dynamic_array/implementations/double/: CMakeLists.txt  dynamic_array_d.c  dynamic_array_d.h
data_structures/dynamic_array/implementations/int/: CMakeLists.txt  dynamic_array_i.c  dynamic_array_i.h
data_structures/dynamic_array/implementations/string/: CMakeLists.txt  dynamic_array_s.c  dynamic_array_s.h
data_structures/linked_list/: CMakeLists.txt  doubly_node.c  doubly_node.h  singly_node.c  singly_node.h
data_structures/linked_list/circular_doubly/: CMakeLists.txt  doubly_circular_ll.c  doubly_circular_ll.h
data_structures/linked_list/circular_singly/: CMakeLists.txt  singly_circular_ll.c  singly_circular_ll.h
data_structures/linked_list/doubly/: CMakeLists.txt  doubly_ll.c  doubly_ll.h
data_structures/linked_list/implementations/: CMakeLists.txt
data_structures/linked_list/implementations/doubly/int/: CMakeLists.txt  linkedlist_i.c  linkedlist_i.h
data_structures/linked_list/implementations/doubly/node/: CMakeLists.txt
data_structures/linked_list/implementations/doubly/node/char/: CMakeLists.txt  node_doubly_c.c  node_doubly_c.h
data_structures/linked_list/implementations/doubly/node/double/: CMakeLists.txt  node_doubly_d.c  node_doubly_d.h
data_structures/linked_list/implementations/doubly/node/int/: CMakeLists.txt  node_doubly_i.c  node_doubly_i.h
data_structures/linked_list/implementations/doubly/node/string/: CMakeLists.txt  node_doubly_s.c  node_doubly_s.h
data_structures/linked_list/implementations/singly/: CMakeLists.txt
data_structures/linked_list/implementations/singly/char/: CMakeLists.txt  linkedlist_c.c  linkedlist_c.h
data_structures/linked_list/implementations/singly/double/: CMakeLists.txt  linkedlist_d.c  linkedlist_d.h
data_structures/linked_list/implementations/singly/int/: CMakeLists.txt  linkedlist_i.c  linkedlist_i.h
data_structures/linked_list/implementations/singly/node/char/: CMakeLists.txt  node_singly_c.c  node_singly_c.h
data_structures/linked_list/implementations/singly/node/double/: CMakeLists.txt  node_singly_d.c  node_singly_d.h
data_structures/linked_list/implementations/singly/node/int/: CMakeLists.txt  node_singly_i.c  node_singly_i.h
data_structures/linked_list/implementations/singly/node/string/: CMakeLists.txt  node_singly_s.c  node_singly_s.h
data_structures/linked_list/implementations/singly/string/: CMakeLists.txt  linkedlist_s.c  linkedlist_s.h
data_structures/linked_list/singly/: CMakeLists.txt  singly_ll.c  singly_ll.h
data_structures/queue/: CMakeLists.txt
data_structures/queue/circular/: CMakeLists.txt  doubly_ll_implementation.c  doubly_ll_implementation.h  ll_implementation.c  ll_implementation.h  static_array.c  static_array.h
data_structures/queue/non-circular/: CMakeLists.txt  ll_implementation.c  ll_implementation.h  static_array.c  static_array.h
data_structures/stack/: CMakeLists.txt  dynamic_array_implementation.c  dynamic_array_implementation.h  ll_implementation.c  ll_implementation.h  static_array_implementation.c  static_array_implementation.h
dynamic_array/: main.c
dynamic_array/implementation/: CMakeLists.txt  dynamic_array.c  dynamic_array.h  dynamic_array_using_static.c  dynamic_array_using_static.h
linked_list/: main.c
linked_list/implementation/: CMakeLists.txt  linked_list.c  linked_list.h
queue/: main.c
queue/implementation/: CMakeLists.txt  circular_static_queue.c  circular_static_queue.h  static_queue.c  static_queue.h
stack/: main.c
stack/application/: CMakeLists.txt  expression_parser.c  (+3 more)
(+7 files in other folders)
