# add all types of data structures for compilation
add_subdirectory(dequeue)
add_subdirectory(dynamic_array)
add_subdirectory(queue)
add_subdirectory(stack)
add_subdirectory(tree)
add_subdirectory(linked_list)
add_subdirectory(hashing)

# add all types of linked-list
add_subdirectory(linked_list/singly)
add_subdirectory(linked_list/doubly)
add_subdirectory(linked_list/circular_singly)
add_subdirectory(linked_list/circular_doubly)

# add all types of queues
add_subdirectory(queue/circular)
add_subdirectory(queue/non-circular)

# add all types of tree
add_subdirectory(tree/avl)
add_subdirectory(tree/bst)
add_subdirectory(tree/red_black)